test/error/Asr.mod
MODULE Asr;

 CONST negN = ASR(1, -1);

 PROCEDURE Go*;
 VAR ignore: INTEGER;
 BEGIN
  ignore := negN
 END Go;

END Asr.
